JSHManager ChangeLog

Version 0.2.2
-------------
- Corrected a bug that prevented you from logging in if you did not
  enter your username /exactly/ as it appeared on ScoreHero.
- Clicking a blue, underlined score (or the open button next to the image
  URL in the editor) will now open an internal picture viewer instead of 
  launching an external browser, if possible.

Version 0.2.1
-------------
- Added extra logging and improved error checking when logging in to
  ScoreHero.
- Added a new menu item to upload logs to pastebin.com in the
  Help -> View Log menu. After uploading, you can copy and paste the
  URLs when reporting an issue so that I can see the logging information.
- Added a new step to the score download wizard that allows you to download
  scores for multiple platforms/difficulties/instruments in one shot.
- Fixed bug when trying to download RB scores where a rating wasn't specified.
- Added a CSV score importer accessible from the "Scores" menu. See
  Readme.txt for more details.

Version 0.2.0
-------------
- Rock Band 1 and 2 are now supported. While it only took 35 characters
  to express that, I assure you, it took a significant effort to
  actually make it happen ;)
- Corrected issue when updating Guitar Hero song data that failed to
  update an existing song if new information had been discovered, such
  as a note count.
- When using the score editor panel to create and save a new score,
  the entire tree of scores is no longer reloaded.
- You can now more quickly enter a score via the score editor by
  clicking "Add score via editor" from the "Scores" menu or by pressing
  CTRL+N. This has the effect of toggling the editor if it is hidden
  and then pressing the "New" button in the editor.

Version 0.1.0
-------------
- Additional logging information is stored in data/logs.
- Corrected calculated rating rounding to be consistent with ScoreHero.
- Quick access to the Readme, ChangeLog, License, and logs has been added
  to the Help menu.