@@ -182,6 +182,15 @@ public class GhScore extends jshm.Score {
 		return RATING_ICONS[index];
 	}
 	
+	
+	public void submit() throws Exception {
+		if (!isSubmittable())
+			throw new IllegalArgumentException("This score is not submittable");
+		
+		jshm.sh.Api.submitGhScore(this);
+	}
+	
+	
 	// override object methods
 	
 
